--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 1 Semestr (Py)/3 Unit/5.1.4.py
 1 Semestr (Py)/3 Unit/5.2.4.py
 1 Semestr (Py)/3 Unit/5.3.4.py
+1 Semestr (Py)/4 Unit/5.1.6.py
+1 Semestr (Py)/4 Unit/5.2.5.py
+1 Semestr (Py)/4 Unit/5.3.6.py
