--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 1 Semestr (Py)/4 Unit/5.1.6.py
 1 Semestr (Py)/4 Unit/5.2.5.py
 1 Semestr (Py)/4 Unit/5.3.6.py
+1 Semestr (Py)/1 Unit/1.py
+1 Semestr (Py)/1 Unit/2.py
+1 Semestr (Py)/1 Unit/3.py
+1 Semestr (Py)/1 Unit/4.py
