--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 1 Semestr (Py)/1 Unit/2.py
 1 Semestr (Py)/1 Unit/3.py
 1 Semestr (Py)/1 Unit/4.py
+1 Semestr (Py)/2 Unit/5.1.1.py
+1 Semestr (Py)/2 Unit/5.1.2.py
+1 Semestr (Py)/2 Unit/5.2.1.py
