--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 1 Semestr (Py)/2 Unit/5.1.1.py
 1 Semestr (Py)/2 Unit/5.1.2.py
 1 Semestr (Py)/2 Unit/5.2.1.py
+1 Semestr (Py)/5 Unit/5.1.1.py
+1 Semestr (Py)/5 Unit/5.2.1.py
+1 Semestr (Py)/5 Unit/5.3.1.py
+1 Semestr (Py)/6 Unit/6.1.1.py
+1 Semestr (Py)/6 Unit/6.2.1.py
