--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 1 Semestr (Py)/5 Unit/5.3.1.py
 1 Semestr (Py)/6 Unit/6.1.1.py
 1 Semestr (Py)/6 Unit/6.2.1.py
+1 Semestr (Py)/7 Unit/sortsortsort.py
